added workflow in dashboard
